--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,15 @@
 asn1crypto==0.24.0
+bcrypt==3.1.7
 cffi==1.11.5
 cryptography==2.3.1
 Django==2.1.2
+django-ranged-response==0.2.0
+django-simple-captcha==0.5.11
 idna==2.7
+paramiko==2.6.0
+Pillow==6.1.0
 pycparser==2.19
 PyMySQL==0.9.2
+PyNaCl==1.3.0
 pytz==2018.7
 six==1.11.0
